# kicad-library

./: README.md  mkdocs.yml  pyproject.toml
3d_models/: DFN-8_L3.0-W3.0-H0.7-P0.65.wrl  IND-SMD_L5.4-W5.2-H3.0.wrl  SMD-PIND_L12.5-W12.5-H8.0.wrl  SW_SMD_SPDT_Slide_8.6x5.6v1.1.step  SW_SMD_SPDT_Top_Slide_7.8x3.75.step  SW_SMD_SPST_5x3.step  SW_SMD_SPST_Side_6.3x6.7.step  USB_Micro-B_Connector_SMD_7.5x5.6mm.step  USB_Micro-B_Connector_SMD_7.5x6.3mm.step
docs/: index.md
footprints/: BarrelJack_CUI_PJ-036AH-SMT_Horizontal.kicad_mod  DFN-8_L3.0-W3.0-P0.65-BL.kicad_mod  ESOP-8_L4.9-W3.9-P1.27-LS6.0-BL-EP.kicad_mod  ESP32-C3-MINI-1-N4.kicad_mod  L1008.kicad_mod  L_0805_2012Metric.kicad_mod  MAX17048G+T10.mod  MICRO-USB-SMD_5P_C40945.kicad_mod  MICRO-USB-SMD_MICRO-USB-18.kicad_mod  PDFN3333.kicad_mod  PROG_1x3_1.27.kicad_mod  QFN-16_L3.0-W3.0-P0.50-TL-EP1.7.kicad_mod  SW_SMD_SPDT_Slide9x6.9mm.kicad_mod  SW_SMD_SPDT_Slide_9x6.9no-hole.kicad_mod  SW_SMD_SPST_4x3.3.kicad_mod  SW_SMD_SPST_8x3.6.kicad_mod  SW_SMD_SPST_JS1400BFQ.kicad_mod  SW_SMD_SPST_mini_SMD-1.kicad_mod  TO254P942H425-4.kicad_mod  USB_C_Receptacle_XKB_U262-16XN-4BVC11.kicad_mod  WS2812B-NARROW.kicad_mod  WS2812B.kicad_mod
symbols/: ESP32.kicad_sym  Fuses.kicad_sym  STR-BatteryManagement.kicad_sym  STR-BatteryProtection.kicad_sym  STR-Connectors.kicad_sym  STR-DCDC.kicad_sym  STR-ESP32.kicad_sym  STR-Fuses.kicad_sym  STR-LED.kicad_sym  STR-MOSFETS.kicad_sym  STR-Sensors.kicad_sym  STR-Switches.kicad_sym  STR-Switches.lib  STR-USB.kicad_sym  STR-USB.lib  STR_Inductors.kicad_sym
(+30 files in other folders)
