[tool.poetry]
name = "kicad-library"
version = "0.0.1"
description = "KiCad Libraries that used for my projects"
authors = ["Stephen Eaton"]
license = "CC-A-SA"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "8.3.8"
mkdocs-mermaid2-plugin = "^0.5"
mkdocs-macros-plugin = "^0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
